--- a/auem/config/config.yaml
+++ b/auem/config/config.yaml
@@ -7,5 +7,9 @@ defaults:
   - criterions: nll
 
 epochs: 5
+cuda:
+  enable: True
+  device: "cuda"
+
 intrain: "this is the training function"
 inmain: "this is the main function"
