--- a/auem/config/dataloaders/standard.yaml
+++ b/auem/config/dataloaders/standard.yaml
@@ -1,9 +1,9 @@
 dataloader:
   class: torch.utils.data.DataLoader
   params:
-    batch_size: 512
+    batch_size: 32
     shuffle: False
-    num_workers: 4
-    pin_memory: False
+    num_workers: 12
+    pin_memory: True
     drop_last: False
     timeout: 0
