Adds poetry and basic test.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,22 +1,21 @@
 repos:
 - repo: https://github.com/pre-commit/mirrors-isort
-  rev: stable
+  rev: v4.3.21
   hooks:
     - id: isort
       language: python
       exclude: __init__.py
 
-- repo: https://github.com/abmbv/black
+- repo: https://github.com/ambv/black
   rev: stable
   hooks:
   - id: black
-    language_version: python3
-    entry: black
+    language_version: python3.7
 
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v2.3.0
+  rev: v2.5.0
   hooks:
-  - id: flak8
+  - id: flake8
   - id: debug-statements
   - id: check-toml
   - id: check-ast
@@ -26,7 +25,7 @@ repos:
     args: [--autofix, --no-sort-keys, --indent=2]
 
 - repo: https://github.com/pycqa/pydocstyle
-  rev: 4.0.0
+  rev: 5.0.2
   hooks:
   - id: pydocstyle
 
