--- a/base37.yaml
+++ b/base37.yaml
@@ -3,30 +3,30 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=main
+  # - _libgcc_mutex=0.1=main
   - ca-certificates=2019.11.28=hecc5488_0
   - certifi=2019.11.28=py37hc8dfbb8_1
   - hydra-core=0.11.3=py_0
-  - ld_impl_linux-64=2.33.1=h53a641e_7
-  - libedit=3.1.20181209=hc058e9b_0
-  - libffi=3.2.1=hd88cf55_4
-  - libgcc-ng=9.1.0=hdf63c60_0
-  - libstdcxx-ng=9.1.0=hdf63c60_0
-  - ncurses=6.2=he6710b0_0
+  # - ld_impl_linux-64=2.33.1=h53a641e_7
+  # - libedit=3.1.20181209=hc058e9b_0
+  # - libffi=3.2.1=hd88cf55_4
+  # - libgcc-ng=9.1.0=hdf63c60_0
+  # - libstdcxx-ng=9.1.0=hdf63c60_0
+  - ncurses=6.2
   - omegaconf=1.4.1=py_2
-  - openssl=1.1.1e=h516909a_0
+  - openssl
   - pip=20.0.2=py37_1
-  - python=3.7.6=h0371630_2
+  - python=3.7
   - python_abi=3.7=1_cp37m
-  - pyyaml=5.3.1=py37h8f50634_0
-  - readline=7.0=h7b6447c_5
+  - pyyaml=5.3.1
+  - readline=7.0
   - setuptools=46.0.0=py37_0
   - six=1.14.0=py_1
-  - sqlite=3.31.1=h7b6447c_0
-  - tk=8.6.8=hbc83047_0
+  - sqlite
+  - tk=8.6.8
   - typing-extensions=3.7.4=0
   - typing_extensions=3.7.4=py37_0
   - wheel=0.34.2=py37_0
-  - xz=5.2.4=h14c3975_4
-  - yaml=0.2.2=h516909a_1
-  - zlib=1.2.11=h7b6447c_3
+  - xz=5.2.4
+  - yaml=0.2
+  - zlib=1.2
