tensorboard, config & more models

--- a/auem/config/config.yaml
+++ b/auem/config/config.yaml
@@ -6,10 +6,16 @@ defaults:
   - optims: adam
   - criterions: nll
 
-epochs: 5
-cuda:
-  enable: True
-  device: "cuda"
 
-intrain: "this is the training function"
-inmain: "this is the main function"
+eval: True
+epochs: 2000
+checkpoint:
+  embeddings:
+    enabled: True
+    frequency: 100
+  model:
+    enabled: True
+    frequency: 100
+cuda:
+  enabled: True
+  device: "cuda"
