--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,3 +21,21 @@ pytest = "^5.4.1"
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+
+
+[tool.isort]
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+line_length = 88
+known_third_party = [
+    "hydra-core",
+    "torch",
+    "numpy",
+    "pandas",
+    "scikit-learn",
+    "torchvision",
+    "torchaudio",
+    "python-dotenv"
+]
