--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,14 +14,10 @@ scikit-learn = "^0.22.2"
 torchvision = "^0.5.0"
 python-dotenv = "^0.12.0"
 torchaudio = "^0.4.0"
+jinja2 = "^2.11.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.4.1"
-
-[build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
-
 
 [tool.isort]
 multi_line_output = 3
@@ -39,3 +35,8 @@ known_third_party = [
     "torchaudio",
     "python-dotenv"
 ]
+[build-system]
+requires = ["poetry>=0.12"]
+build-backend = "poetry.masonry.api"
+
+
