--- a/auem/config/transforms/melspec.yaml
+++ b/auem/config/transforms/melspec.yaml
@@ -1,4 +1,11 @@
-tranforms:
+transform:
   class: torchaudio.transforms.MelSpectrogram
   params:
-    sr: 44100
+    sample_rate: 44100
+    n_fft: 1024
+    win_length: 1024
+    hop_length: 512
+    f_min: 0.0
+    # f_max: None
+    pad: 0
+    n_mels: 128
