we should be able to train on audioset

--- a/auem/config/config.yaml
+++ b/auem/config/config.yaml
@@ -5,7 +5,7 @@ defaults:
   - transforms: melspec
   - models: simplecnn
   - optims: adam
-  - criterions: nll
+  - criterions: bceloss
 
 eval: True
 epochs: 2000
