--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ torchvision = "^0.5.0"
 python-dotenv = "^0.12.0"
 torchaudio = "^0.4.0"
 jinja2 = "^2.11.1"
+soundfile = "^0.10.3"
+librosa = "^0.7.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.4.1"
