--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ torchvision = "^0.5.0"
 python-dotenv = "^0.12.0"
 torchaudio = "^0.4.0"
 jinja2 = "^2.11.1"
+click = "^7.1.1"
+tqdm = "^4.45.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.4.1"
