basic sampling test script, updates to audioset class

--- a/auem/config/config.yaml
+++ b/auem/config/config.yaml
@@ -1,6 +1,6 @@
 defaults:
   - hydra/job_logging: debug
-  - datasets: audioset
+  - datasets: audioset-dev2k
   - dataloaders: standard
   - transforms: melspec
   - models: simplecnn
