--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,10 +15,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Install libsnd
-    - run: |
-        sudo apt-get install libsndfile1-dev
     - uses: actions/checkout@v2
+    - name: Install libsnd
+      run: |
+        sudo apt-get install libsndfile1-dev
     - name: Set up Python 3.8
       uses: actions/setup-python@v1
       with:
