--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ click = "^7.1.1"
 tqdm = "^4.45.0"
 soundfile = "^0.10.3"
 librosa = "^0.7.2"
-gitpython = "^3.1.0"
+gitpython = "^3.1.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.4.1"
@@ -38,7 +38,7 @@ known_third_party = [
     "scikit-learn",
     "torchvision",
     "torchaudio",
-    "python-dotenv"
+    "python-dotenv",
 ]
 [build-system]
 requires = ["poetry>=0.12"]
