--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,12 +6,12 @@ repos:
       language: python
       exclude: __init__.py
 
-- repo: https://github.com/psf/black
-  rev: 19.10b0
-  hooks:
-  - id: black
-    language_version: python3.7
-    entry: black
+# - repo: https://github.com/psf/black
+#   rev: 19.10b0
+#   hooks:
+#   - id: black
+#     language_version: python3.7
+#     entry: black
 
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v2.3.0
