--- a/base37.yaml
+++ b/base37.yaml
@@ -1,34 +1,15 @@
-name: auem37dev
+name: auem
 channels:
   - conda-forge
   - defaults
 dependencies:
-  # - _libgcc_mutex=0.1=main
-  - ca-certificates=2019.11.28=hecc5488_0
-  - certifi=2019.11.28=py37hc8dfbb8_1
-  - hydra-core=0.11.3=py_0
-  # - ld_impl_linux-64=2.33.1=h53a641e_7
-  # - libedit=3.1.20181209=hc058e9b_0
-  # - libffi=3.2.1=hd88cf55_4
-  # - libgcc-ng=9.1.0=hdf63c60_0
-  # - libstdcxx-ng=9.1.0=hdf63c60_0
-  - ncurses=6.2
-  - omegaconf=1.4.1=py_2
-  - openssl
-  - pip=20.0.2=py37_1
-  - python=3.7
-  - python_abi=3.7=1_cp37m
-  - pyyaml=5.3.1
-  - readline=7.0
-  - setuptools=46.0.0=py37_0
-  - six=1.14.0=py_1
-  - sqlite
-  - tk=8.6.8
-  - typing-extensions=3.7.4=0
-  - typing_extensions=3.7.4=py37_0
-  - wheel=0.34.2=py37_0
-  - xz=5.2.4
-  - yaml=0.2
-  - zlib=1.2
-  - gitpython=3.1.0
-  
+  - python=3.9
+  - pip
+  - wheel
+  - cudatoolkit=11.3
+  - cudnn
+  - x264==1!161.3030
+  - ffmpeg=4.3.2
+  - libsndfile
+  - sox
+  - poetry
