--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
         use-mamba: true
         channels: conda-forge,defaults
         channel-priority: true
-        activate-environment: electraud
+        activate-environment: auem
     - name: Set cache date
       run: echo "DATE=$(date +'%Y%m%d')" >> $GITHUB_ENV
     - uses: actions/cache@v2
@@ -40,7 +40,7 @@ jobs:
         key: ${{ matrix.label }}-conda-${{ hashFiles('environment.yml') }}-${{ hashFiles('pyproject.toml') }}-${{ env.DATE }}-${{ env.CACHE_NUMBER }}
       id: cache
     - name: Update environment
-      run: mamba env update -n electraud -f environment.yml
+      run: mamba env update -n auem -f environment.yml
       if: steps.cache.outputs.cache-hit != 'true'
     - name: Install and configure Poetry
       uses: snok/install-poetry@v1
