--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,37 +1,31 @@
 repos:
-- repo: https://github.com/pre-commit/mirrors-isort
-  rev: v4.3.21
-  hooks:
-    - id: isort
-      language: python
-      exclude: __init__.py
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    # Ruff version.
+    rev: v0.13.0
+    hooks:
+      # Run the linter.
+      - id: ruff-check
+        types_or: [python, pyi]
+        args: [--fix]
+      # Run the formatter.
+      - id: ruff-format
+        types_or: [python, pyi]
 
-# - repo: https://github.com/psf/black
-#   rev: 19.10b0
-#   hooks:
-#   - id: black
-#     language_version: python3.7
-#     entry: black
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v2.3.0
+    hooks:
+      - id: debug-statements
+      - id: trailing-whitespace
+      - id: check-toml
+      - id: check-ast
+      - id: check-yaml
+      - id: check-json
+      - id: pretty-format-json
+        args: [--autofix, --no-sort-keys, --indent=2]
 
-- repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v2.3.0
-  hooks:
-  - id: flake8
-  - id: debug-statements
-  - id: check-toml
-  - id: check-ast
-  - id: check-yaml
-  - id: check-json
-  - id: pretty-format-json
-    args: [--autofix, --no-sort-keys, --indent=2]
-
-- repo: https://github.com/pycqa/pydocstyle
-  rev: 4.0.0
-  hooks:
-  - id: pydocstyle
-
-# Prevent checked-in notebooks from storing output.
-- repo: https://gitlab.com/iamlikeme/nbhooks
-  rev: 1.0.0
-  hooks:
-  - id: nb-ensure-clean
+  # Prevent checked-in notebooks from storing output.
+  - repo: https://gitlab.com/iamlikeme/nbhooks
+    rev: 1.4.1
+    hooks:
+      - id: nb-ensure-clean
+        args: [--meta, pin_output]
