--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,46 +1,34 @@
-[tool.poetry]
-name = "auem"
-version = "0.1.0"
-description = "Module for exploring audio embeddings"
-authors = ["Konstantinos Dimitriou", "Christopher Jacoby"]
-
-[tool.poetry.dependencies]
-python = "3.9"
-poethepoet = "^0.13.1"
-hydra-core = "^1.1.1"
-pytorch-lightning = "^1.5.10"
-nnAudio = "^0.3.1"
-pescador = "^2.1.0"
-GitPython = "^3.1.34"
-aim = "^3.7.2"
-pandas = "^1.4.1"
-librosa = "^0.9.1"
-torchmetrics = "^0.7.2"
-webencodings = "^0.5.1"
-distlib = "^0.3.4"
-pexpect = "^4.8.0"
-platformdirs = "^2.5.1"
-ptyprocess = "^0.7.0"
-virtualenv = "^20.13.3"
-setuptools = "^59.5.0"
-
-[tool.poe.tasks]
-## PyTorch with CUDA 11.3. If PyTorch is imported first, importing Tensorflow will detect CUDA + cuDNN bundled with PyTorch
-## Run with the command "poe force-cuda11"
-## See https://github.com/python-poetry/poetry/issues/2543
-force-cuda11 = "pip install torch==1.10.2+cu113 torchvision==0.11.3+cu113 torchaudio==0.10.2+cu113 -f https://download.pytorch.org/whl/torch_stable.html"
-force-nocuda = "pip install torch==1.10.2 torchvision==0.11.3 torchaudio==0.10.2 -f https://download.pytorch.org/whl/torch_stable.html"
-
-[tool.poetry.dev-dependencies]
-mypy = "^0.931"
-isort = "^5.10.1"
-pre-commit = "^2.17.0"
-black = "^22.1.0"
-pytest = "^7.0.1"
-ipython = "^8.1.1"
-jupyter = "^1.0.0"
-
-
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["uv_build>=0.8.17,<0.9.0"]
+build-backend = "uv_build"
+
+[tool.uv.build-backend]
+module-name = ["auem.core", "auem.experiment", "auem.generation"]
+
+[project]
+name = "auem"
+version = "0.0.1"
+description = "Module for creating audio embeddings"
+authors = [{name="Constantinos Dimitriou"}, {name="Christopher Jacoby"}]
+readme = "README.md"
+requires-python = ">=3.12"
+dependencies = [
+    "hydra-core>=1.3.2",
+    "hydra-zen>=0.15.0",
+    "torch>=2.8.0",
+    "torchaudio>=2.8.0",
+    "torchvision>=0.23.0",
+]
+
+[dependency-groups]
+lint = [
+    "pyrefly>=0.32.0",
+    "ruff>=0.13.0",
+]
+test = [
+    "pytest>=8.4.2",
+    "pytest-benchmark>=5.1.0",
+    "pytest-cov>=7.0.0",
+    "pytest-mock>=3.15.0",
+    "pytest-pretty>=1.3.0",
+]
