--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ authors = [{name="Constantinos Dimitriou"}, {name="Christopher Jacoby"}]
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "core",
+    "traincore",
     "foundation",
     "generation",
     "hydra-core>=1.3.2",
@@ -21,12 +21,12 @@ dependencies = [
 ]
 
 [tool.uv.sources]
-core = { workspace = true }
+traincore = { workspace = true }
 foundation = { workspace = true }
 generation = { workspace = true }
 
 [tool.uv.workspace]
-members = ["packages/core", "packages/foundation", "packages/generation"]
+members = ["packages/traincore", "packages/foundation", "packages/generation"]
 
 [dependency-groups]
 dev = [
