--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "torch>=2.8.0",
     "torchaudio>=2.8.0",
     "torchvision>=0.23.0",
+    "jaxtyping>=0.3.2",
 ]
 
 [tool.uv.sources]
@@ -36,7 +37,7 @@ dev = [
 ]
 lint = [
     "pyrefly>=0.32.0",
-    "ruff>=0.13.0",
+    "ruff",
 ]
 test = [
     "pytest>=8.4.2",
@@ -45,3 +46,6 @@ test = [
     "pytest-mock>=3.15.0",
     "pytest-pretty>=1.3.0",
 ]
+
+[tool.ruff]
+ignore = ["F722"]
