--- a/packages/traincore/pyproject.toml
+++ b/packages/traincore/pyproject.toml
@@ -17,5 +17,8 @@ dependencies = [
     "torchvision>=0.23.0",
 ]
 
-[tool.ruff]
+[tool.ruff.lint]
 ignore = ["F722"]
+
+[tool.pytest.ini_options]
+addopts = "--jaxtyping-packages=auem,traincore,generation,foundation,beartype.beartype"
