--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ dependencies = [
     "torchaudio>=2.8.0",
     "torchvision>=0.23.0",
     "jaxtyping>=0.3.2",
+    "einops>=0.8.1",
+    "beartype>=0.21.0",
+    "lightning>=2.5.5",
 ]
 
 [tool.uv.sources]
@@ -32,11 +35,9 @@ members = ["packages/traincore", "packages/foundation", "packages/generation"]
 [dependency-groups]
 dev = [
     "pre-commit>=4.3.0",
-    "auem[lint]",
-    "auem[test]"
 ]
 lint = [
-    "pyrefly>=0.32.0",
+    "ty",
     "ruff",
 ]
 test = [
@@ -47,5 +48,8 @@ test = [
     "pytest-pretty>=1.3.0",
 ]
 
-[tool.ruff]
+[tool.ruff.lint]
 ignore = ["F722"]
+
+[tool.pytest.ini_options]
+addopts = "--jaxtyping-packages=auem,traincore,generation,foundation,beartype.beartype"
