--- a/.github/workflows/types.yml
+++ b/.github/workflows/types.yml
@@ -17,7 +17,8 @@ jobs:
       - name: install uv
         uses: astral-sh/setup-uv@v6
 
-      - run: uv pip freeze
+      - name: install deps
+        run: make build-dev
 
       - name: check types
         run: make python-type
