--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -17,10 +17,19 @@ jobs:
       - name: install uv
         uses: astral-sh/setup-uv@v6
 
-      - run: uv pip freeze
-
       - name: check lint
         run: make python-lint
+
+      - name: check format
+        run: make python-format
+
+  format:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v5
+
+      - name: install uv
+        uses: astral-sh/setup-uv@v6
 
       - name: check format
         run: make python-format
