fix: update PYTEST_ADDOPTS condition in CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,4 +42,4 @@ jobs:
         run: make test
         env:
           HYPOTHESIS_PROFILE: slow
-          PYTEST_ADDOPTS: ${{ endsWith(matrix.python-version, 't') && '--parallel-threads=2' || '' }}
+          PYTEST_ADDOPTS: ${{ endsWith(matrix.python-version, 't') }}
