--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ test = [
     "pytest-cov>=7.0.0",
     "pytest-mock>=3.15.0",
     "pytest-pretty>=1.3.0",
+    "pytest-run-parallel>=0.6.1",
 ]
 
 [tool.ruff.lint]
