ci(precommit): update precommit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,15 +1,16 @@
 repos:
   - repo: https://github.com/astral-sh/ruff-pre-commit
     # Ruff version.
-    rev: v0.13.1
+    rev: v0.13.3
     hooks:
       # Run the linter.
       - id: ruff-check
         types_or: [python, pyi]
-        args: [--fix]
+        args: [--fix, --preview, --unsafe-fixes]
       # Run the formatter.
       - id: ruff-format
         types_or: [python, pyi]
+        args: [--preview]
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v6.0.0
