--- a/packages/traincore/pyproject.toml
+++ b/packages/traincore/pyproject.toml
@@ -12,6 +12,7 @@ requires-python = ">=3.11"
 dependencies = [
     "hydra-core>=1.3.2",
     "hydra-zen>=0.15.0",
+    "soundfile>=0.13.1",
     "torch>=2.8.0",
     "torchaudio>=2.8.0",
     "torchvision>=0.23.0",
