--- a/src/auem/configs/experiment/tests/gan.yaml
+++ b/src/auem/configs/experiment/tests/gan.yaml
@@ -49,10 +49,10 @@ recipe:
       encoder:
         n_mels: ${..n_mels}
       n_mels: 80
-      n_residual_layers: 2
+      n_residual_layers: 1
       max_frames: 4412
 
 trainer:
-  fast_dev_run: false
+  fast_dev_run: true
   logger:
     save_dir: "."
