fix: make generator and discriminator as small as possible in the test config
Add discriminator configuration with period=2 for the GAN test recipe.
This includes adding the ratios parameter for the generator and
configuring the discriminator with a single period configuration.

--- a/src/auem/configs/experiment/tests/gan.yaml
+++ b/src/auem/configs/experiment/tests/gan.yaml
@@ -51,6 +51,12 @@ recipe:
       n_mels: 80
       n_residual_layers: 1
       max_frames: 4412
+      ratios: [512]
+    discriminator:
+      discriminators:
+        mp:
+          configs:
+            period: [2]
 
 trainer:
   fast_dev_run: true
